# pryce

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  steps.md
.github/workflows/: ci.yml
derivlab-build/: CMakeCache.txt
docs/: architecture.md  benchmark_results.csv  benchmarking.md  mc_vs_bs_input.csv  syntax_examples.md
examples/autodiff_greeks/: README.md  black_scholes_with_greeks.py  call_with_greeks.mlir  expected_lowered.mlir  run_pipeline.sh
examples/digital_option/: README.md  black_scholes_digital.py  config.yaml  digital_option.mlir  expected_lowered.mlir  run_pipeline.sh
examples/european_call/: README.md  black_scholes.py  call_option.mlir  config.yaml  expected_lowered.mlir  run_pipeline.sh
examples/symbolic_risk/: README.md  architecture.dot  contract.yaml  risk_test.mlir  run_pipeline.sh  yaml_to_mlir.py
examples/variance_reduction/: README.md  bs_call.py  call_antithetic.mlir  call_control_variate.mlir  run_all.sh
mlir/: CMakeLists.txt
mlir/include/DerivLab/: DerivLabDialect.h  DerivLabOps.td  DiscountOp.td  RiskDSL.td
mlir/lib/: LowerContracts.cpp  RiskAutodiff.cpp
mlir/lib/Dialect/: DerivLabDialect.cpp
mlir/lib/Transforms/: LowerDiscount.cpp  LowerPayoff.cpp  LowerSimulateGBM.cpp  Passes.cpp
runtime/: black_scholes.cpp  shock_engine.cpp  utils.cpp
scripts/: benchmark_mc.py  compare_mc_vs_bs.py  export_to_csv.py  fuzz_derivlab.py  regression_check.sh  run_pipeline.sh  setup_env.sh  test_pipeline.sh
test/: call_option_example.mlir  put_option_example.mlir  test_payoff.mlir
test/golden/: test_simulate_gbm.ll
(+5 files in other folders)
